yle-dl - download videos from Yle servers
Copyright 2009-2023 Antti Ajanki
Distributed under the GPL v3 or later

<unreleased>

- --startposition for not working on live streams
- "--startposition 0" now starts live streams from the beginning

Version 20231120

- Requires Python 3.7+
- Try to detect if the destination filesystem requires a restricted character
  set. Only if an optional dependency python-psutil is installed.
- The metadata now contains just subtitles, not embedded_subtitles
- The subtitle language code in the metadata is correct instead of "unk"
- Create directories by default. Use --no-create-dirs to stop if directory does
  not exist. (This was the previous default.)
- Read configuration from ~/.config/yledl.conf in addition to ~/.yledl.conf
- New output template variables: ${season} and ${episode_or_date}

Version 20230611

- Fixed news clip downloading after changes to the Yle news site
- The download URL for a new flavor of podcasts was incorrect

Version 20221231

- Full series download on Swedish language arenan.yle.fi fixed
- Downloading news clips from yle.fi (in addition to yle.fi/uutiset/)
- Improved episode sorting when several episodes are published on the same day

Version 20221111

- Fixed some geo-blocking related failures

Version 20221015

- Support new live radio URLs containing /podcastit/
- --restrict-filename-no-spaces avoids spaces in generated filenames
- --restrict-filename-no-specials generates Windows-compatible filenames (alias for --vfat)
- --output-na-placeholder: Placeholder value for unavailable fields in filenames
- --xattrs: Write metadata to the video file's extended attributes
- Correct series and episode titles in cases where the series title was missing

Version 20220830

- Fixed a crash if a title is missing
- "--latestepisode" was sometimes selecting a wrong episode
- Improved retry on very long and slow downloads
- Include description as metadata in audio output files

Version 20220704
