@@ -6,6 +6,7 @@ Distributed under the GPL v3 or later
 
 - --startposition for not working on live streams
 - "--startposition 0" now starts live streams from the beginning
+- Fixed yle.fi video extraction
 
 Version 20231120
 
